--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
+$primary-color: rgb(117, 108, 108);
+$secondary-color: #f5603b;
 $show-home-image: true;
 $home-image: url(../images/background.jpg);
 $background-opacity: 0.6;
