--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -13,7 +13,7 @@
     text-align: center;
 
     .lg-heading {
-      line-height: 1.1;
+      line-height: 1;
       margin-bottom: 1rem;
     }
   }
@@ -46,6 +46,16 @@
       width: 150px;
       height: 150px;
     }
+  }
+
+  .about-info {
+    grid-template-areas:
+      "bioimage"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
+    grid-template-columns: 1fr;
   }
 }
 
