--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,5 @@
 $primary-color: rgb(117, 108, 108);
+// $primary-color: #fff;
 $secondary-color: #f5603b;
 $show-home-image: true;
 $home-image: url(../images/background.jpg);
@@ -27,6 +28,15 @@ $background-opacity: 0.6;
         background: rgba($primary-color, $background-opacity);
       }
     }
+  }
+}
+
+//Set Text Color
+@function set-text-color($color) {
+  @if (lightness($color) > 60) {
+    @return #000;
+  } @else {
+    @return #fff;
   }
 }
 
